--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/lizzyhllrn/she-ai-proj/blob/main/client/src/index.html">
+<meta http-equiv="refresh" content="0; url=https://lizzyhllrn.github.io/she-ai-proj/client/src/index.html">
